# Amundi_Projet_Perso

./: .env  BXX1_analytics_test.py  BXX1_analytics_test2.py  README.md  aixigo_test.py  client.py  get_token.py  main.py  mcp_client.py  mock_aixigo.py  pyproject.toml  usecase1_client.py  usecase1_mcpserver.py  usecase1_mockserver.py
scripts_archivés/: get_token.py  usecase1_client.py  usecase1_mockserver.py
