[project]
name = "amundi-projet-perso"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.72.0",
    "fastapi>=0.120.2",
    "httpx>=0.28.1",
    "mcp[cli]>=1.19.0",
    "requests>=2.32.5",
    "uvicorn>=0.38.0",
]
